--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,13 @@
   <artifactId>samurai-dao-auto-proxy-guice</artifactId>
   <packaging>jar</packaging>
   <name>dao</name>
-  <version>1.2.0-RC1</version>
+  <version>1.2.0-SNAPSHOT</version>
 <!--
+  <version>1.2.0-RC1</version>
   <version>1.2.0-SNAPSHOT</version>
 -->
-  <description></description>
-  <url>http://code.google.com/p/samurai-dao/</url>
+  <description>samurai-dao is a simple, high performance object/relational persistence and query service.</description>
+  <url>https://github.com/satoshi-kimura/samurai-dao-auto-proxy-guice/</url>
   <inceptionYear>2008-2015</inceptionYear>
 
   <licenses>
@@ -24,9 +25,9 @@
     </license>
   </licenses>
   <scm>
-    <connection>https://github.com/satoshi-kimura/samurai-dao-auto-proxy-guice/</connection>
-    <developerConnection>https://github.com/satoshi-kimura/samurai-dao-auto-proxy-guice.git</developerConnection>
     <url>https://github.com/satoshi-kimura/samurai-dao-auto-proxy-guice/</url>
+    <connection>https://github.com/satoshi-kimura/samurai-dao-auto-proxy-guice.git</connection>
+    <developerConnection>https://github.com/satoshi-kimura/samurai-dao-auto-proxy-guice.git</developerConnection>
   </scm>
   <developers>
     <developer>
@@ -227,11 +228,6 @@
   </build>
   <repositories>
     <repository>
-      <id>maven.seasar.org</id>
-      <name>The Seasar Foundation Maven2 Repository</name>
-      <url>http://maven.seasar.org/maven2</url>
-    </repository>
-    <repository>
       <id>janerics.googlecode.com</id>
       <name>janerics-maven2</name>
       <url>http://janerics.googlecode.com/svn/maven2/</url>
@@ -251,29 +247,8 @@
     <dependency>
       <groupId>jp.dodododo</groupId>
       <artifactId>samurai-dao</artifactId>
-      <version>1.2.0-RC3</version>
+      <version>1.2.0-SNAPSHOT</version>
       <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.seasar.container</groupId>
-      <artifactId>s2-extension</artifactId>
-      <version>2.4.48</version>
-      <type>jar</type>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>ognl</groupId>
-          <artifactId>ognl</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.apache.poi</groupId>
-          <artifactId>poi</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -283,9 +258,9 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>hsqldb</groupId>
+      <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <version>1.8.0.7</version>
+      <version>2.3.2</version>
       <type>jar</type>
       <scope>test</scope>
     </dependency>
@@ -301,14 +276,6 @@
       <artifactId>geronimo-j2ee_1.4_spec</artifactId>
       <version>1.0</version>
       <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jta_1.1_spec</artifactId>
-      <version>1.0</version>
-      <type>jar</type>
-      <optional>true</optional>
       <scope>test</scope>
     </dependency>
     <dependency>
