--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=ERROR, C
 
-log4j.category.jp.dodododo=DEBUG, C
+log4j.logger.jp.dodododo=DEBUG, C
 log4j.additivity.jp.dodododo=false
 
 log4j.appender.C=org.apache.log4j.ConsoleAppender
