--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
   <artifactId>samurai-dao-auto-proxy-guice</artifactId>
   <packaging>jar</packaging>
   <name>dao</name>
-  <version>1.1.3</version>
-<!--
   <version>1.1.4-SNAPSHOT</version>
+<!--
+  <version>1.1.5-SNAPSHOT</version>
 -->
   <description></description>
-  <url>http://code.google.com/p/samurai-dao/</url>
-  <inceptionYear>2008-2015</inceptionYear>
+  <url>https://github.com/satoshi-kimura/samurai-dao-auto-proxy-guice/</url>
+  <inceptionYear>2008-2016</inceptionYear>
 
   <licenses>
     <license>
